# ESP32S3-EMO-Dot

./: README.md
examples/esp-idf/esp_lvgl_185/main/: CMakeLists.txt  idf_component.yml  main.c  mmap_generate_lottie_assets.h
examples/esp-idf/esp_lvgl_185/main/app/: app_bmi270.c  app_bmi270.h  app_charging.c  app_charging.h  app_espnow.c  app_espnow.h  app_icm.c  app_icm.h  app_led.c  app_led.h  app_rmaker.c  app_rmaker.h  app_sntp.c  app_speech_if.h  app_speech_rec.c  app_tcp_server.c  app_tcp_server.h  app_vibration.c  app_vibration.h  app_weather.c  app_wifi.c  app_wifi.h
examples/esp-idf/esp_lvgl_185/main/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
examples/esp-idf/esp_lvgl_185/main/ui/src/components/: ui_comp_buttonround.c  ui_comp_forecastgroup.c  ui_comp_todayweathergroup.c
examples/esp-idf/esp_lvgl_185/main/ui/src/images/: ui_img_1630624692.c  ui_img_act013_png.c  ui_img_ai_robot_png.c  ui_img_bg1_png.c  ui_img_bg2_png.c  ui_img_bg3_png.c  ui_img_btn_bg_1_png.c  ui_img_btn_bg_2_png.c  ui_img_btn_bg_3_png.c  ui_img_code_demo_png.c  ui_img_daily_mission_png.c  ui_img_flash_png.c  ui_img_heart_png.c  ui_img_img_ir_png.c  ui_img_net_png.c  ui_img_red_arraw_png.c  ui_img_round_imu_png.c  ui_img_s1_png.c  ui_img_s2_png.c  ui_img_s3_png.c  ui_img_s4_png.c  ui_img_s5_png.c  ui_img_s6_png.c  ui_img_s7_png.c  ui_img_s8_png.c  ui_img_s9_png.c  ui_img_sec_dot_png.c  ui_img_step_png.c  ui_img_volume_png.c  ui_img_wave1_png.c  ui_img_wave2_png.c
examples/esp-idf/esp_lvgl_185/main/ui/src/screens/: ui_IMU.c  ui_ScreenIR.c  ui_ScreenNet.c  (+3 more)
(+17 files in other folders)
